# IR

./: 8.txt  CMakeLists.txt  README.md  frame.txt  transfer.txt
backup/: OccupancyCounter.cpp  OccupancyCounter.h
data/: 10.txt  100.txt  100_1.txt  11.txt  12.txt  13.txt  14.txt  15.txt  150.txt  150_1.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  56.txt  57.txt  58.txt  59.txt  6.txt  60.txt  7.txt  81.txt  82.txt  83.txt  84.txt  85.txt  86.txt  86_1.txt  9.txt  d100.txt  d100_1.txt  d150.txt  d150_1.txt  d150_2.txt  d150_3.txt  d86.txt  d86_1.txt  exp1.txt  (+3 more)
libextendxmpp/: CMakeCache.txt  TransactionQueue_test  XMPPUtils_test  XMPPWorker_test
src/: GridEyeReader.cpp  GridEyeReader.h  HotSpotter.cpp  OccupancyCounter.cpp  OccupancyCounter.h  XMPPInterface.cpp  XMPPWrapper.cpp  XMPPWrapper.h  blob.cpp  params.h
src/libextendxmpp/: Makefile  cmake_install.cmake
